[package]
name = "nadesiko3rust"
version = "0.2.0"
authors = ["kujirahand"]
description = "Japanese programming language Nadesiko v3 for WASM"
license-file = "LICENSE"
edition = "2021"
readme = "README.md"
repository = "https://github.com/kujirahand/nadesiko3rust"
homepage = "https://nadesi.com"
documentation = "https://docs.rs/nadesiko3"
keywords = ["script", "Japanese"] 

[dependencies]
wasm-bindgen = "0.2"
# nadesiko3 = { path = "../core" }
nadesiko3 = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
